add linear regression with multiple vars

--- a/static/index.html
+++ b/static/index.html
@@ -1,8 +1,9 @@
 <html>
   <head>
-    <script src="p5.min.js"></script>
-    <script src="linearregression.js"></script>
   </head>
   <body>
+  	<a href="/LinearRegressionOneVar">LinearRegressionOneVar</a> <br/>
+  	<a href="/LinearRegressionMultiVar">LinearRegressionMultiVar</a> <br/>
+
   </body>
 </html>
