branch next time.. not working

--- a/static/index.html
+++ b/static/index.html
@@ -4,6 +4,10 @@
   <body>
   	<a href="/LinearRegressionOneVar">LinearRegressionOneVar</a> <br/>
   	<a href="/LinearRegressionMultiVar">LinearRegressionMultiVar</a> <br/>
+  	<a href="/LogisticRegression">LogisticRegression</a> <br/>
+  	<a href="/NeuralNetwork">NeuralNetwork</a> <br/>
+
+
 
   </body>
 </html>
